2001-09-19  Jacob Smullyan  <smulloni@smullyan.org>

	* pylibs/vfs.py: added vfs interface and LocalFS implementation.

	* SkunkWeb/Services/templating/Handler.py (requestHandler): modified templating 
	to use the new vfs layer.

	* pylibs/AE/Cache.py (_readDocRoot, _statDocRoot, 
	_getDocRootModTime, _getPathFSAndMinistat): now access the document root 
	via a vfs interface.
	(Configuration): added Configuration variable "documentRootFS", a list of
	filesystems (vfs.FS implementations) that the Cache will look in, in order, 
	to find a given resource.

2001-09-18  Drew Csillag  <drew@starmedia.net>

	* pylibs/scopable/_scope.c (Scopeable_saveMash): fixed refcounting
	bug 

	* pylibs/scopable/_scope.c (Scopeable_init): Added a number of
	Py_DECREF calls that were needed to not leak memory.

	* pylibs/scopable/_scope.c (_mergeDefaults): Added a Py_DECREF
	when creating a new dict when dictList is empty.
	
i2001-09-09  Jacob Smullyan  <smulloni@smullyan.org>

	* pylibs/scopeable/.cvsignore: added Setup

2001-09-08  Jacob Smullyan  <smulloni@smullyan.org>

	* SkunkWeb/SkunkWeb/ConfigAdditives.py: now refer to scopeable, not scope, 
	for imported ScopeMatchers.

	* SkunkWeb/SkunkWeb/Hooks.py (KeyedHook.__call__): removed the nasty
	debugging statements and import hacks from this often used function.

	* pylibs/scopeable/_scope.c: various modifications, one would hope 
	improvements, to reference counting.

2001-09-07  Jacob Smullyan  <smulloni@smullyan.org>

	* SkunkWeb/sw.conf.in, SkunkWeb/Services/httpd/__init__.py, 
	SkunkWeb/Services/httpd/protocol.py: improved handling of SERVER_NAME; 
	added ServerName configuration variable

2001-09-06  Drew Csillag  <drew@starmedia.net>

        * pylibs/PyDO/doc: documentation of |port thing
	
	* docs/PyDO/PyDO.tex: documentation of |port thing

	* pylibs/PyDO/pgenscript.py: enhancements by Greg Brauer and
	now supports |port feature

	* pylibs/PostgreSql/__init__.py:  added |port feature to connect
	string
